    resets oomadj of child processes to 0, so that the client backends can
    still get OOM-killed. Add tests to t/020_create_sql_remove.t.
    (LP: #854590)
  * debian/control: Add Breaks: to postgresql-9.1 versios before 9.1.1-3, as
    they do not reset oomadj for child processes. This is a precaution to
    avoid running all the client backends with -16 as well.

 -- Martin Pitt <mpitt@debian.org>  Sat, 08 Oct 2011 12:16:13 +0200

postgresql-common (124) unstable; urgency=medium

  * Keeping urgency medium, as 123 did not make it into testing yet.
  * PgCommon.pm, cluster_info(): Use /bin/ps instead of reading /proc/*/comm,
    the latter was reported to not work on some systems.
  * pg_ctlcluster: Use PgCommon::check_pidfile_running and drop duplicated
    code.
  * pg_wrapper: The previous multiarch globbing was wrong, as it looked for
    the architecture in uname() (which doesn't work on i386, where uname says
    i686). Now get the multiarch library path from whereever psql expects
    libedit.so to be, so that this even works if you install postgresql-client
    for a foreign architecture.

 -- Martin Pitt <mpitt@debian.org>  Sat, 08 Oct 2011 11:48:46 +0200

postgresql-common (123) unstable; urgency=medium

  * Urgency medium, as bug 644078 slipped into testing, and is quite a nasty
    regression for people that it affects.
  * t/001_packages.t: Check that the -plpython3 package is installed for
    >= 9.1.
  * t/020_create_sql_remove.t: Check that the "plpython3u" language works.
  * t/020_create_sql_remove.t: More thoroughly check PL/Perl and PL/PerlU.
  * PgCommon.pm, cluster_info(): If we have a PID file and can read it (i. e.
    as root), prefer doing this over probing the port. This delivers the
    correct result with e. g. "pg_ctlcluster restart" when the port got
    changed in the configuration file. (Closes: #643850)
  * pg_wrapper: Drop dpkg-architecture call; we don't want to introduce a